--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "material-color-lite",
-    "description": "",
+    "description": "A lightweight, high-performance, and tree-shakable alternative to @material/material-color-utilities for generating Material Design 3 color schemes.",
     "license": "Apache-2.0",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "repository": {
